--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -88,6 +88,10 @@ spec:
             value: "{{ .Values.thorasReasoning.enabled }}"
           - name: FORECAST_IMAGE_PULL_POLICY
             value: "{{ .Values.imagePullPolicy }}"
+          {{- if (.Values.thorasOperator.queries_per_second | default .Values.queries_per_second) }}
+          - name: SERVICE_QUERIES_PER_SECOND
+            value: {{ .Values.thorasOperator.queries_per_second | default .Values.queries_per_second | quote }}
+          {{- end }}
         command: [
           "/app/operator"
         ]
