Added MODEL_SKIP_CACHE to op

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -88,6 +88,8 @@ spec:
             value: "{{ .Values.thorasReasoning.enabled }}"
           - name: FORECAST_IMAGE_PULL_POLICY
             value: "{{ .Values.imagePullPolicy }}"
+          - name: MODEL_SKIP_CACHE
+            value: "{{ .Values.thorasForecast.skipCache }}"
         command: [
           "/app/operator"
         ]
