--- a/charts/thoras/tests/operator_deployment_test.yaml
+++ b/charts/thoras/tests/operator_deployment_test.yaml
@@ -18,4 +18,11 @@ tests:
       - equal:
           path: $.spec.template.spec.containers[0].env[?(@.name == 'SERVICE_REASONING_ENABLED')].value
           value: "true"
-
+  - it: Ensure MODEL_SKIP_CACHE not exists when reasoning is enabled
+    set:
+      thorasForecast:
+        skipCache: true
+    asserts:
+      - equal:
+          path: $.spec.template.spec.containers[0].env[?(@.name == 'MODEL_SKIP_CACHE')].value
+          value: "true"
