--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -108,6 +108,10 @@ spec:
             value: "{{ .Values.cluster.name }}"
           - name: SERVICE_STORAGE_FILE_PATH
             value: "/var/lib/share"
+          {{- if .Values.thorasApiServerV2.timescalePrimary }}
+          - name: SERVICE_TIMESCALE_PRIMARY
+            value: "true"
+          {{- end }}
           {{- if (.Values.thorasApiServerV2.queries_per_second | default .Values.queries_per_second) }}
           - name: SERVICE_QUERIES_PER_SECOND
             value: {{ .Values.thorasApiServerV2.queries_per_second | default .Values.queries_per_second | quote }}
