add env variable to collector for controlling parallelization

--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -185,3 +185,5 @@ spec:
               secretKeyRef:
                 name: thoras-timescale-password
                 key: password
+          - name: SERVICE_COLLECTION_PARALLELIZATION
+            value: "{{ .Values.metricsCollector.collector.parallelization | default 20}}"
