--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -110,9 +110,9 @@ spec:
             value: "/var/lib/share"
           - name: SERVICE_TIMESCALE_PRIMARY
             value: {{ .Values.thorasApiServerV2.timescalePrimary | quote}}
-          {{- if (.Values.thorasApiServerV2.queries_per_second | default .Values.queries_per_second) }}
+          {{- if (.Values.thorasApiServerV2.queriesPerSecond | default .Values.queriesPerSecond) }}
           - name: SERVICE_QUERIES_PER_SECOND
-            value: {{ .Values.thorasApiServerV2.queries_per_second | default .Values.queries_per_second | quote }}
+            value: {{ .Values.thorasApiServerV2.queriesPerSecond | default .Values.queriesPerSecond | quote }}
           {{- end }}
         volumeMounts:
           {{- if .Values.metricsCollector.persistence.enabled }}
