--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -157,3 +157,6 @@ thorasReasoning:
     requests:
       cpu: 128m
       memory: 8Mi
+
+# K8s client max queries per second
+queriesPerSecond: "50"
