--- a/charts/thoras/templates/reasoning-api/deployment.yaml
+++ b/charts/thoras/templates/reasoning-api/deployment.yaml
@@ -74,4 +74,8 @@ spec:
           requests:
             cpu: {{ .Values.thorasReasoning.api.requests.cpu }}
             memory: {{ .Values.thorasReasoning.api.requests.memory }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{ end }}
