--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -119,6 +119,8 @@ thorasApiServerV2:
   port: 80
   logLevel: "info"
   timescalePrimary: false
+  catalogRefreshInterval: "60s"
+  cacheWindow: "10s"
   additionalPvSecurityContext: {}
 
 thorasDashboard:
