--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -22,12 +22,17 @@ spec:
         helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- with .Values.thorasApiServerV2.podAnnotations }}
       annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.thorasApiServerV2.prometheus.enabled }}
+      {{- if not .Values.thorasApiServerV2.podAnnotations }}
+      annotations:
+      {{- end }}
         prometheus.io/scrape: "true"
         prometheus.io/path: "/metrics"
         prometheus.io/port: {{ .Values.thorasApiServerV2.containerPort | quote}}
-      {{- with .Values.thorasApiServerV2.podAnnotations }}
-        {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
       serviceAccountName: {{ .Values.thorasApiServerV2.serviceAccount.name }}
