--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -22,6 +22,9 @@ spec:
         helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- with .Values.thorasApiServerV2.labels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with .Values.thorasApiServerV2.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
