--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -22,6 +22,9 @@ spec:
         helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- with .Values.thorasDashboard.labels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with .Values.thorasDashboard.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
