--- a/charts/thoras/templates/api-server-v2/service.yaml
+++ b/charts/thoras/templates/api-server-v2/service.yaml
@@ -4,6 +4,10 @@ kind: Service
 metadata:
   name: thoras-api-server-v2
   namespace: {{ .Release.Namespace }}
+{{- with .Values.thorasApiServerV2.labels }}
+  labels:
+  {{- toYaml . | nindent 4 }}
+{{- end }}
 spec:
   ports:
   - port: {{ .Values.thorasApiServerV2.port }}
