--- a/charts/thoras/templates/dashboard/service.yaml
+++ b/charts/thoras/templates/dashboard/service.yaml
@@ -8,6 +8,10 @@ metadata:
   annotations:
     {{- toYaml . | nindent 8 }}
   {{- end }}
+  {{- with .Values.thorasDashboard.labels }}
+  labels:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
 {{- if (or (eq .Values.thorasDashboard.service.type "ClusterIP") (empty .Values.thorasDashboard.service.type)) }}
   type: ClusterIP
