Remove duplicated thorasReasoning.podAnnotations

--- a/charts/thoras/templates/reasoning-api/deployment.yaml
+++ b/charts/thoras/templates/reasoning-api/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/instance: {{ .Release.Name }}
-        {{- with .Values.thorasAgent.labels }}
+        {{- with .Values.thorasReasoning.api.labels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- with .Values.thorasReasoning.api.podAnnotations }}
