--- a/charts/thoras/templates/reasoning-api/service.yaml
+++ b/charts/thoras/templates/reasoning-api/service.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: thoras-reasoning-api
   namespace: {{ .Release.Namespace }}
-  {{- with .Values.thorasReasoning.labels }}
+  {{- with .Values.thorasReasoning.api.labels }}
   labels:
     {{- toYaml . | nindent 4 }}
   {{- end }}
