--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   helm-unit-tests:
     runs-on: ubuntu-latest
+    env:
+      SKIP: no-commit-to-branch
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,3 +22,5 @@ jobs:
         run: helm plugin install https://github.com/helm-unittest/helm-unittest.git
       - name: Run Helm Unit Tests
         run: helm unittest ./charts/thoras --chart-tests-path ./charts/thoras/tests
+      - uses: actions/setup-python@v3
+      - uses: pre-commit/action@v3.0.1
